# molecule-recognizer

./: .gitignore  README.md  atom_image_generator.py  cli.py  constants.py  dataset.py  demo_streamlit.py  download_dataset.sh  download_fonts.sh  download_mmcv.sh  download_model.sh  download_models.sh  download_sample_dataset.sh  environment.yml  inchi_pipeline.py  install_mmdet.sh  molecules.py  pipeline.py  pyproject.toml  requirements.txt  run.py  run_gan_augmentation.py  run_inchi.py
configs/: detector_config.py
demo/: session_state.py
detector/: inference.py
image_captioning/: .gitignore  README.md  __init__.py  base.py  config.py  constants.py  datasets.py  effnetv2.py  helpers.py  models.py  requirements.txt  tokenization.py  tokenizer.py  train.py
image_captioning/cli/: cli_template.py  commands.py
image_captioning/configs/: pipeline.py
image_captioning/models/: base.py  registry.py
image_captioning/pipeline/: config.py
image_captioning/utils/: evaluate.py  helpers.py  prediction.py  training.py
recognizer/: dataset.py
recognizer/classifier/: fastai_classifier.py
recognizer/common/: boxes.py  constants.py  minimalistic_mol.py  molecule_generator.py  molecule_utils.py
recognizer/dataset_for_classifier/: constants.py  dataset_creation.py
recognizer/detector/: inference.py  structure.py  utils.py
recognizer/drawing/: boxes.py  text.py
recognizer/image_processing/: augmentation.py  normalization.py  utils.py
recognizer/imago_service/: imago.py
recognizer/models/: MPRNet.py
recognizer/pipelines/: augmentation.py  evaluation.py  (+3 more)
(+19 files in other folders)
