[tool.poetry]
name = "recognizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
mmdet = "2.7.0"
mmpycocotools = "12.0.3"
torch = "1.7.1"
torchvision = "0.8.2"
mmcv-full = { path = 'mmcv/mmcv_full-1.2.1+torch1.7.0+cpu-cp37-cp37m-manylinux1_x86_64.whl' }
fastai = "1.0.61"
CairoSVG = "^2.5.2"
svgpathtools = "1.4.1"
scikit-learn = "0.24.1"
pytest = "6.2.3"
Pillow = "8.2.0"
numpy = "1.19.2"
scikit-image = "^0.18.1"
gdown = "^3.12.2"
opencv-python = "^4.5.1"
addict = "^2.4.0"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
